--- a/lab1_Spectral_and_temporal_modifications/data/GabrielaBITTENCOURT_and_Santiago.ipynb
+++ b/lab1_Spectral_and_temporal_modifications/data/GabrielaBITTENCOURT_and_Santiago.ipynb
@@ -305,30 +305,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "110\n"
-     ]
-    }
-   ],
-   "source": [
-    "ta_filter = A[0][B[1]]\n",
-    "Pa_filter = A[2][B[1]]\n",
-    "ts = B[0]\n",
-    "    \n",
-    "# initialize y\n",
-    "#slod = ts[-1] + Pa[-1]\n",
-    "print(Pa_filter[-1])\n",
-    "#y = np.zeros(ts[-1] + Pa[-1])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
@@ -378,15 +354,8 @@
    ],
    "source": [
     "times = np.arange(len(y))*timestep\n",
-    "plot_sound(y, times)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "plot_sound(y, times)\n",
+    "\n",
     "# creates an audio file with the result\n",
     "write_n_play_sound('perfect_reconstruction.wav', y)"
    ]
@@ -665,6 +634,13 @@
     "# creates an audio file with the result\n",
     "write_n_play_sound('time_n_frequency_scale2.wav', y)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
