Some small things

--- a/lab1_Spectral_and_temporal_modifications/data/GabrielaBITTENCOURT_and_Santiago.ipynb
+++ b/lab1_Spectral_and_temporal_modifications/data/GabrielaBITTENCOURT_and_Santiago.ipynb
@@ -255,12 +255,10 @@
     "    Pa = np.ceil(np.array([0.01*Fs])).astype(int)\n",
     "    voiced = np.array([0])\n",
     "    \n",
-    "    while ( ta[-1]+2.5*Pa[-1] <= len(s) ) : # while there are frames\n",
+    "    while ( ta[-1]+2.5*Pa[-1] < len(s) ) :\n",
     "        \n",
     "        # Extracting x -> start: ta(n-1), duration: 2.5*Pa(n-1)\n",
-    "        t0 = int(ta[-1])\n",
-    "        tf = int(ta[-1] + 2.5*Pa[-1])\n",
-    "        x = s[t0:tf]\n",
+    "        x = s[int(ta[-1]) : int(ta[-1] + 2.5*Pa[-1])]\n",
     "        \n",
     "        # Computation Pa(n) and voiced(n)\n",
     "        Pa     = np.append(Pa,    period(x, Fs)[0])\n",
@@ -634,13 +632,6 @@
     "# creates an audio file with the result\n",
     "write_n_play_sound('time_n_frequency_scale2.wav', y)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
